--- a/atvi/package.json
+++ b/atvi/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^16.7.10",
     "@types/prompt-sync": "^4.1.1",
+    "chalk": "^5.3.0",
     "prompt-sync": "^4.2.0"
   }
 }
