--- a/atvi/package.json
+++ b/atvi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atvi-wb",
   "version": "0.0.1",
-  "description": "Repositório com códigos de auxilio para o desenvolvimento de uma agenda de cadastro de clientes, em TypeScript. Os códigos sao para auxilio da ATVI da disciplina de técnicas de programaçao I.",
+  "description": "Repositório com códigos de auxilio para o desenvolvimento de uma agenda de cadastro de clientes, em TypeScript. Os códigos sao para auxilio da ATVI da disciplina de tecnicas de programaçao I.",
   "main": "out/app/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
